helm/k8sgpt/k8sgpt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8sgpt-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: k8sgpt.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8sgpt
                port:
                  number: 80
